--- a/source/style/common/greating.scss
+++ b/source/style/common/greating.scss
@@ -6,7 +6,7 @@
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
 
   &_text {
-    font: 45px 'Arial', sans-serif;
+    font: 45px 'ALSMalina', sans-serif;
     color: #fff;
   }
 
