--- a/source/style/common/sprite.scss
+++ b/source/style/common/sprite.scss
@@ -1,101 +1,30 @@
-// SCSS variables are information about icon's compiled state, stored under its original file name
-//
-// .icon-home {
-//   width: $icon-home-width;
-// }
-//
-// The large array-like variables contain all information about a single icon
-// $icon-home: x y offset_x offset_y width height total_width total_height image_path;
-//
-// At the bottom of this section, we provide information about the spritesheet itself
-// $spritesheet: width height image $spritesheet-sprites;
-$phone-hover-name: 'phone-hover';
-$phone-hover-x: 0px;
-$phone-hover-y: 0px;
-$phone-hover-offset-x: 0px;
-$phone-hover-offset-y: 0px;
-$phone-hover-width: 32px;
-$phone-hover-height: 32px;
-$phone-hover-total-width: 64px;
-$phone-hover-total-height: 32px;
-$phone-hover-image: '../../images/sprite.png';
-$phone-hover: (0px, 0px, 0px, 0px, 32px, 32px, 64px, 32px, '../../images/sprite.png', 'phone-hover', );
-$phone-name: 'phone';
-$phone-x: 32px;
-$phone-y: 0px;
-$phone-offset-x: -32px;
-$phone-offset-y: 0px;
-$phone-width: 32px;
-$phone-height: 32px;
-$phone-total-width: 64px;
-$phone-total-height: 32px;
-$phone-image: '../../images/sprite.png';
-$phone: (32px, 0px, -32px, 0px, 32px, 32px, 64px, 32px, '../../images/sprite.png', 'phone', );
-$spritesheet-width: 64px;
-$spritesheet-height: 32px;
-$spritesheet-image: '../../images/sprite.png';
-$spritesheet-sprites: ($phone-hover, $phone, );
-$spritesheet: (64px, 32px, '../../images/sprite.png', $spritesheet-sprites, );
+/*
+Icon classes can be used entirely standalone. They are named after their original file names.
 
-// The provided mixins are intended to be used with the array-like variables
-//
-// .icon-home {
-//   @include sprite-width($icon-home);
-// }
-//
-// .icon-email {
-//   @include sprite($icon-email);
-// }
-//
-// Example usage in HTML:
-//
-// `display: block` sprite:
-// <div class="icon-home"></div>
-//
-// To change `display` (e.g. `display: inline-block;`), we suggest using a common CSS class:
-//
-// // CSS
-// .icon {
-//   display: inline-block;
-// }
-//
-// // HTML
-// <i class="icon icon-home"></i>
-@mixin sprite-width($sprite) {
-  width: nth($sprite, 5);
+Example usage in HTML:
+
+`display: block` sprite:
+<div class="icon-home"></div>
+
+To change `display` (e.g. `display: inline-block;`), we suggest using a common CSS class:
+
+// CSS
+.icon {
+  display: inline-block;
 }
 
-@mixin sprite-height($sprite) {
-  height: nth($sprite, 6);
+// HTML
+<i class="icon icon-home"></i>
+*/
+.icon-phone:hover {
+  background-image: url(../img/sprite.png);
+  background-position: 0px 0px;
+  width: 32px;
+  height: 32px;
 }
-
-@mixin sprite-position($sprite) {
-  $sprite-offset-x: nth($sprite, 3);
-  $sprite-offset-y: nth($sprite, 4);
-  background-position: $sprite-offset-x  $sprite-offset-y;
-}
-
-@mixin sprite-image($sprite) {
-  $sprite-image: nth($sprite, 9);
-  background-image: url(#{$sprite-image});
-}
-
-@mixin sprite($sprite) {
-  @include sprite-image($sprite);
-  @include sprite-position($sprite);
-  @include sprite-width($sprite);
-  @include sprite-height($sprite);
-}
-
-// The `sprites` mixin generates identical output to the CSS template
-//   but can be overridden inside of SCSS
-//
-// @include sprites($spritesheet-sprites);
-@mixin sprites($sprites) {
-  @each $sprite in $sprites {
-    $sprite-name: nth($sprite, 10);
-    .#{$sprite-name} {
-      @include sprite($sprite);
-    }
-  }
+.icon-phone {
+  background-image: url(../img/sprite.png);
+  background-position: -32px 0px;
+  width: 32px;
+  height: 32px;
 }
