--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -13,17 +13,17 @@ block content
 				.user__description Личный сайт веб разработчика
 			ul.socials__list
 				li.socials__item
-					a.socials__link(href='#')
+					a.socials__link(href='https://vk.com', target='_blank')
 						i.fa.fa-vk(aria-hidden='true')
 				li.socials__item
-					a.socials__link(href='#')
+					a.socials__link(href='https://github.com', target='_blank')
 						i.fa.fa-github-alt(aria-hidden='true')
 				li.socials__item
-					a.socials__link(href='#')
+					a.socials__link(href='https://linkedin.com', target='_blank')
 						i.fa.fa-linkedin(aria-hidden='true')
 			ul.nav__list
 				li.nav__item.nav__item-big
-					a.nav__link(href='#')
+					a.nav__link(href='works.html')
 						| Мои работы
 				li.nav__item
 					a.nav__link(href='about.html')
