--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -4,6 +4,7 @@ $footer: 110px;
 $white : #efeee9;
 $beige: #eeebdf;
 $main-font-color : #455a64;
+$bg : rgb(250, 248, 240);
 
 %clearfix{
 	&:after, &:before{
