--- a/source/style/common/blog.scss
+++ b/source/style/common/blog.scss
@@ -2,32 +2,41 @@
 	@extend %clearfix;
 }
 
+.section-blog{
+	position:relative;
+	background: $bg;
+	padding: 80px 0;
+	color: #77868d;
+	font-family: 'robotoregular', Arial, sans-serif;
+}
+
 .container{
-	max-width: 1415px;
-	margin: 0 auto;
+	max-width: 1500px;
 }
 
 .nav-blog{
 	float: left;
 	width: 30%;
 	text-align: right;
-
 }
 
 .nav-blog__list{
 	display: inline-block;
 	max-width: 271px;
+	line-height: 26px;
 }
 
 .nav-blog__link{
 	display: block;
 	padding:5px 10px;
-	border: 1px solid transparent;
+	border-right: 3px solid transparent;
 	transition: $transition;
+	margin-bottom: 5px;
 
 	&_active{
-		border-right: 1px solid #00bfa5;
+		border-right: 3px solid #00bfa5;
 		color:#00bfa5;
+		font-family: 'robotobold', Arial, sans-serif;
 	}
 
 	&:hover{
@@ -45,12 +54,31 @@
 .content-blog__item{
 	position: relative;
 
+	&:not(:first-child){
+		margin-top: 160px;
+	}
+
 	&:not(:first-child)::before{
 		content:"";
 		height: 5px;
 		position: absolute;
-		top: 20px;
+		top: -80px;
 		right: 90px;
 		left: 0;
+		background: rgba(#373e42, .07);
 	}
+}
+.content-blog__item-title{
+	font-family: 'bernier_regularregular', Arial, sans-serif;
+	font-size: 35px;
+	color: #455a64;
+}
+
+.content-blog__item-date, .content-blog__item-text{
+	line-height: 26px;
+}
+
+.content-blog__item-date{
+	padding: 20px 0;
+	color: #00bfa5;
 }
