--- a/source/style/common/footer.scss
+++ b/source/style/common/footer.scss
@@ -1,7 +1,7 @@
 .footer__pages{
 	height: $footer;
 	margin-top: -$footer;
-	background: #455a64;
+	background: rgba(#373e42, .85);
 }
 
 .footer_margin_top{
@@ -18,6 +18,7 @@
 	border-bottom: 1px solid rgba(#ffffff, .1);
 	color: #fff;
 	padding: 5px 20px;
+	position: relative;
 
 	&__left{
 		float: left;
@@ -26,9 +27,10 @@
 	}
 
 	&__right{
-		float: right;
-		width: 50%;
-		text-align: right;
+		position: absolute;
+    	top: 50%;
+    	transform: translateY(-45%);
+    	right: 20px;
 	}
 
 	&__item{
@@ -47,6 +49,38 @@
 
 .socials__list_border_circle{
 	margin-bottom: 0;
+
+	.socials__item:not(:first-child){
+		padding-left: 10px
+	}
+
+	.fa{
+		position: absolute;
+    	top: 50%;
+    	left: 50%;
+    	transform: translate(-50%, -55%);
+    	color: rgba(242, 243, 244, 0.8);
+	}
+
+	.socials__link{
+		width: 38px;
+		height: 38px;
+		display: inline-block;
+		text-align: center;
+	    border: 1px solid rgba(242, 243, 244, 0.8);
+	    border-radius: 50%;
+	    position: relative;
+	    transition: $transition;
+
+	    &:hover{
+	    	background: #fff;
+	    	border: 1px solid #fff;
+
+	    	.fa{
+	    		color: rgba(#373e42, .85)
+	    	}
+	    }
+	}
 }
 
 .footer-down{
