--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -26,12 +26,12 @@ block content
 									i.fa.fa-bars(aria-hidden='true')
 					.header__user
 						.user__photo.user__photo_small
-							img.user__pic(src='./assets/img/ava.jpg', alt='Ava')
+							img.user__pic(src='assets/img/ava.jpg', alt='Ava')
 						.header__name
 							.subtitle Блог
 							.header__name-shade
 								svg.header__name-shade-pic
-									use(xlink:href='./assets/img/sprite.svg#blog_header')
+									use(xlink:href='assets/img/sprite.svg#blog_header')
 						.user__description.user__description_color_white Статьи, которые я написал
 		section.section-blog
 			svg(
