--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -8,7 +8,7 @@ block content
 		.content
 			.user__author
 				.user__photo
-					img.user__pic(src='./assets/img/ava.jpg', alt='Ava')
+					img.user__pic(src='assets/img/ava.jpg', alt='Ava')
 				.user__name Владимир Астахов
 				.user__description Личный сайт веб разработчика
 			ul.socials__list
