--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -28,10 +28,10 @@ block content
 					i.fa.fa-chevron-down(aria-hidden='true')
 				.header-without-triangles
 					.header__title
-						img(src="./assets/img/portfolio-header.png", alt="").header__title-img
+						img(src="assets/img/portfolio-header.png", alt="").header__title-img
 						.header__user
 							.user__photo.user__photo_small
-								img.user__pic(src='./assets/img/ava.jpg', alt='Ava')
+								img.user__pic(src='assets/img/ava.jpg', alt='Ava')
 							.user__name.user__name_color_white Владимир Астахов
 							.user__description.user__description_color_white Личный сайт веб-разработчика
 		section.section.works
@@ -56,13 +56,13 @@ block content
 				.works__right
 					.works__slider
 						.works__slider_active
-							img(src='./assets/img/1.png').works__slider-pic_active
+							img(src='assets/img/1.png').works__slider-pic_active
 						ul.slider__list
-							li.slider__item(style='background-image: url("./assets/img/work-1.png")')
+							li.slider__item(style='background-image: url("assets/img/work-1.png")')
 								a.slider__link(href='#').slider__link_color_lighten
 									.slider__button
 										i.fa.fa-chevron-down(aria-hidden='true')
-							li.slider__item(style='background-image: url("./assets/img/work-2.png")')
+							li.slider__item(style='background-image: url("assets/img/work-2.png")')
 								a.slider__link(href='#')
 									.slider__button
 										i.fa.fa-chevron-up(aria-hidden='true')
@@ -79,7 +79,7 @@ block content
 								|Этот парень проходил обучение веб-разработке не где-то, а в Loftschool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
 							.reviews__item-person
 								.reviews-person__photo
-									img.reviews-person__photo-pic(src='./assets/img/teacher.jpg')
+									img.reviews-person__photo-pic(src='assets/img/teacher.jpg')
 								.reviews__item-person-block
 									.reviews__item-person-title Ковальчук Дмитрий
 									.reviews__item-person-role Основатель Loftchool
@@ -89,7 +89,7 @@ block content
 								|Этот код выдержит любые испытания. Только пожалуйста, не загружается сайт на слишком старых браузерах!
 							.reviews__item-person
 								.reviews-person__photo
-									img.reviews-person__photo-pic(src='./assets/img/teacher2.jpg')
+									img.reviews-person__photo-pic(src='assets/img/teacher2.jpg')
 								.reviews__item-person-block
 									.reviews__item-person-title Сабанцев Владимир
 									.reviews__item-person-role Преподаватель
