--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -28,10 +28,10 @@ block content
 					i.fa.fa-chevron-down(aria-hidden='true')
 				.header-without-triangles
 					.header__title
-						img(src="./assets/img/portfolio-header.png", alt="").header__title-img
+						img(src="assets/img/portfolio-header.png", alt="").header__title-img
 						.header__user
 							.user__photo.user__photo_small
-								img.user__pic(src='./assets/img/ava.jpg', alt='Ava')
+								img.user__pic(src='assets/img/ava.jpg', alt='Ava')
 							.user__name.user__name_color_white Владимир Астахов
 							.user__description.user__description_color_white Личный сайт веб-разработчика
 		section.section.about
@@ -45,7 +45,7 @@ block content
 					+title('Обо мне', 'about-header.png', 'about__section-title')
 				.user-about.about__section-description_inline
 					.user-about__photo
-						img.user-about__pic(src='./assets/img/about.jpg', alt='Ava-big')
+						img.user-about__pic(src='assets/img/about.jpg', alt='Ava-big')
 					.user-about__title
 						+title__small('Кто я', 'about__section-title_small')
 					.user-about__text
@@ -65,7 +65,7 @@ block content
 							p Больше всего меня привлекает Frontend разработка, но я также знаком и могу решать сложные задачи на Backend. Но давайте по порядку.
 		section.section.map.last
 			.map__marker
-				img(src='./assets/img/map_marker.svg').map__marker-pic
+				img(src='assets/img/map_marker.svg').map__marker-pic
 			.contacts.information
 				+title__small('Контакты', 'about__section-title_small')
 				.contacts-socials
