--- a/source/style/common/about.scss
+++ b/source/style/common/about.scss
@@ -1,19 +1,27 @@
 .about {
   @extend %clearfix;
   color: $main-font-color;
+  display: flex;
 
 }
 
 .about__left, .about__right {
-  float: left;
-  width: 50%;
   position: relative;
   padding-top: 20px;
+  flex-basis: 50%;
+  min-width: 50%;
 }
 
 .about__left {
   background: $white;
   padding-bottom: 135px;
+  padding-right: 18px;
+  display: flex;
+
+  @include laptop{
+    flex-direction: column;
+    align-items: center;
+  }
   
   .about__triangles{
   	left: 0;
@@ -22,8 +30,7 @@
 
 .about__right {
   background: $beige;
-  height: 865px;
-  padding: 0 110px 30px 30px;
+  padding: 0 20px 30px 30px;
 
   .about__triangles{
   	right: 0;
@@ -109,25 +116,21 @@
 }
 
 .about__left-title{
-  display: inline-block;
-  vertical-align: top;
-  width: 45%;
   padding-left: 20px;
+  flex: 1;
 }
 
+
 .about__section-description_inline{
-  display: inline-block;
-  vertical-align: top;
   text-align: left;
-  width: 54%;
   padding-top: 20px;
-  padding-right: 18px;
   max-width: 462px;
+  flex:1;
+  margin-left: 15px;
 }
 
 .user-about__photo{
-  width: 444px;
-  height: 390px;
+  width: 100%;
   display: inline-block;
 }
 
@@ -181,6 +184,62 @@
 
 .about-user-info__text{
   text-align: left;
+  margin-bottom: 30px;
+  font-family: 'robotoregular', Arial, sans-serif;
+  font-size: 16px;
+}
+
+.skills{
+  text-align: left;
+}
+
+.skills__item{
+  margin-bottom: 20px;
+}
+
+.skill-section__list{
+  margin-left: -20px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.skills-section__item{
+  width: 120px;
+  margin-left: 20px;
+}
+
+.skill-section__title{
+  font-size: 20px;
+  margin-bottom: 7px;
+}
+
+.skill{
+  position: relative;
+}
+
+.skill__circle{
+  fill: none;
+  stroke-width: 15;
+}
+
+.skill__name{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #00bea4;
+  max-width: 65%;
+  overflow: hidden;
+}
+
+.skill__circle-first{
+  fill: none;
+  stroke: #ccc;
+}
+
+.skill__circle-second{
+  stroke: #00bea4;
+  stroke-dasharray: 141.3 282.6;
 }
 
 .last{
@@ -195,12 +254,20 @@
 .map{
   background: url('../img/map.jpg');
   background-size: cover;
+
+  @include laptop{
+    background-position: -600px center;
+  }
 }
 
 .map__marker{
   position: absolute;
   top:362px;
   right: 478px;
+
+  @include laptop{
+    right: 260px;
+  }
 }
 
 .map__marker-pic{
