--- a/source/style/common/index.scss
+++ b/source/style/common/index.scss
@@ -1,20 +1,21 @@
 .content{
 	display: inline-block;
 	vertical-align: middle;
-	background-color: rgba(252,252,252,0.85);
 	border-radius: 5px;
 	overflow: hidden;
 }
 
-.user__name{
-	color: rgb(69, 90, 100);
-	font-size: 28px;
-	margin-bottom: 5px;
+.content__index{
+	background-color: rgba(252,252,252,0.65);
+	padding-bottom: 35px;
+}
+
+.user{
+	margin-bottom: 25px;
 }
 
 .user__author{
 	padding: 40px 66px 0;
-	margin-bottom: 25px;
 }
 
 .user__photo{
@@ -29,14 +30,16 @@
 	width: 100%;
 }
 
+.user__name{
+	color: rgb(69, 90, 100);
+	font-size: 28px;
+	margin-bottom: 5px;
+}
+
 .user__description{
 	color: rgb(102, 119, 127);
 	font-size: 16px;
 	font-family: 'roboto_regular', Arial, sans-serif;
-}
-
-.socials__list{
-	margin-bottom: 35px;
 }
 
 .socials__item{
@@ -44,18 +47,23 @@
 	padding-left: 25px;
 }
 
+.socials__item:first-child{
+	padding-left: 0;
+}
+
 .socials__link{
-	color: #00bfa5;
 	font-size: 24px;
 	transition: $transition;
 }
 
-.socials__link:hover{
-	color: #009688;
-}
+.socials__list_color_green{
+	.socials__link{
+		color: #00bfa5;
 
-.socials__item:first-child{
-	padding-left: 0;
+		&:hover{
+			color: #009688;
+		}
+	}
 }
 
 .nav__list::after{
@@ -68,7 +76,7 @@
 .nav__item{
 	float: left;
 	width: 30%;
-	border-left: 1px solid rgba(252,252,252,0.9);
+	border-left: 1px solid rgba(252,252,252,.65);
 }
 
 .nav__item:first-child{
@@ -82,14 +90,14 @@
 .nav__link{
 	display: block;
 	padding: 11px 10px;
-	background-color: rgba(#00bfa5, .85);
+	background-color: rgba(#00bfa5, .65);
 	color: #fff;
 	font-size: 16px;
 	transition: $transition;
 }
 
 .nav__link:hover{
-	background-color: #009688;
+	background-color: rgba(#009688, .65);
 }
 
 .authorization{
