--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -6,20 +6,21 @@ block variables
 block content
 	.wrapper_with_footer
 		.header
-			.header_colourful
+			.header__input
 				.pages__container
 					.header-up
 						.header-up__left
-							ul.socials__list.socials__list_color_white
-								li.socials__item
-									a.socials__link(href='https://vk.com', target='_blank')
-										i.fa.fa-vk(aria-hidden='true')
-								li.socials__item
-									a.socials__link(href='https://github.com', target='_blank')
-										i.fa.fa-github-alt(aria-hidden='true')
-								li.socials__item
-									a.socials__link(href='https://linkedin.com', target='_blank')
-										i.fa.fa-linkedin(aria-hidden='true')
+							.socials.socials_place_header
+								ul.socials__list.socials__list_color_white
+									li.socials__item
+										a.socials__link(href='https://vk.com', target='_blank')
+											i.fa.fa-vk(aria-hidden='true')
+									li.socials__item
+										a.socials__link(href='https://github.com', target='_blank')
+											i.fa.fa-github-alt(aria-hidden='true')
+									li.socials__item
+										a.socials__link(href='https://linkedin.com', target='_blank')
+											i.fa.fa-linkedin(aria-hidden='true')
 						.header-up__right
 							.burger-menu
 								a.burger-menu__link(href='#')
@@ -63,6 +64,20 @@ block content
 							+title__small('Чем я могу быть вам полезен', 'about__section-title_small')
 						.about-user-info__text
 							p Больше всего меня привлекает Frontend разработка, но я также знаком и могу решать сложные задачи на Backend. Но давайте по порядку.
+						ul.skills
+							each skill in skills
+								each skillsArray, skillName in skill
+									li.skills__item
+										.skill-section
+											.skill-section__title= skillName
+											ul.skill-section__list
+												each skillTitle in skillsArray
+													li.skills-section__item
+														.skill
+															svg.skill__circle(viewbox='0 0 110 110')
+																circle.skill__circle-first(r='45', cx='50%', cy='50%')
+																circle.skill__circle-second(r='45', cx='50%', cy='50%', transform='rotate(-90 55 55)')
+															.skill__name= skillTitle
 		section.section.map.last
 			.map__marker
 				img(src='assets/img/map_marker.svg').map__marker-pic
@@ -99,16 +114,17 @@ block content
 								a.footer-up__link(href="#")
 									|Авторизация
 					.footer-up__right
-						ul.socials__list.socials__list_border_circle
-							li.socials__item
-								a.socials__link(href='https://vk.com', target='_blank')
-									i.fa.fa-vk(aria-hidden='true')
-							li.socials__item
-								a.socials__link(href='https://github.com', target='_blank')
-									i.fa.fa-github-alt(aria-hidden='true')
-							li.socials__item
-								a.socials__link(href='https://linkedin.com', target='_blank')
-									i.fa.fa-linkedin(aria-hidden='true')
+						.socials.socials_place_footer
+							ul.socials__list.socials__list_border_circle
+								li.socials__item
+									a.socials__link(href='https://vk.com', target='_blank')
+										i.fa.fa-vk(aria-hidden='true')
+								li.socials__item
+									a.socials__link(href='https://github.com', target='_blank')
+										i.fa.fa-github-alt(aria-hidden='true')
+								li.socials__item
+									a.socials__link(href='https://linkedin.com', target='_blank')
+										i.fa.fa-linkedin(aria-hidden='true')
 				.footer-down
 					.footer-down__left
 						.footer__description
