--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -6,20 +6,21 @@ block variables
 block content
 	.wrapper.wrapper_for_blog
 		.header.header__blog
-			.header_colourful
+			.header__input
 				.blog__container
 					.header-up
 						.header-up__left
-							ul.socials__list.socials__list_color_white
-								li.socials__item
-									a.socials__link(href='https://vk.com', target='_blank')
-										i.fa.fa-vk(aria-hidden='true')
-								li.socials__item
-									a.socials__link(href='https://github.com', target='_blank')
-										i.fa.fa-github-alt(aria-hidden='true')
-								li.socials__item
-									a.socials__link(href='https://linkedin.com', target='_blank')
-										i.fa.fa-linkedin(aria-hidden='true')
+							.socials.socials_place_header
+								ul.socials__list.socials__list_color_white
+									li.socials__item
+										a.socials__link(href='https://vk.com', target='_blank')
+											i.fa.fa-vk(aria-hidden='true')
+									li.socials__item
+										a.socials__link(href='https://github.com', target='_blank')
+											i.fa.fa-github-alt(aria-hidden='true')
+									li.socials__item
+										a.socials__link(href='https://linkedin.com', target='_blank')
+											i.fa.fa-linkedin(aria-hidden='true')
 						.header-up__right
 							.burger-menu
 								a.burger-menu__link(href='#')
@@ -55,32 +56,54 @@ block content
 				.content-blog
 					ul.content-blog__list
 						li.content-blog__item
-							.content-blog__item-title
-								|Самое важное в SASS
-							.content-blog__item-date
-								|22 ноября 2016
-							.content-blog__item-text
-								|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
-								|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
-								|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+							.content-blog__item-main
+								.content-blog__item-title
+									|Самое важное в SASS
+								.content-blog__item-date
+									|22 ноября 2016
+								.content-blog__item-text
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+							.content-blog__item-code
+								ul.content-blog__item-code-list
+									li.content-blog__item-code-item 
+										|1
+									li.content-blog__item-code-item 
+										|2
+									li.content-blog__item-code-item 
+										|3
+									li.content-blog__item-code-item 
+										|4
+									li.content-blog__item-code-item 
+										|5
+								pre.content-blog__item-code-data
+									p.content-blog__item-code-datatext
+										|//присвоить
+										|$(document).data(#[span.content-blog__item-code-data_green 'prop'], {anything: #[span.content-blog__item-code-data_green "любой объект"]})
+										|
+										|//присвоить
+										|$(document).data(#[span.content-blog__item-code-data_green 'prop'], {anything: #[span.content-blog__item-code-data_green "любой объект"]})
 						li.content-blog__item
-							.content-blog__item-title
-								|Приёмы в вёрстке, без которых не обходится ни один сайт
-							.content-blog__item-date
-								|22 ноября 2016
-							.content-blog__item-text
-								|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
-								|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
-								|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+							.content-blog__item-main
+								.content-blog__item-title
+									|Приёмы в вёрстке, без которых не обходится ни один сайт
+								.content-blog__item-date
+									|22 ноября 2016
+								.content-blog__item-text
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
 						li.content-blog__item
-							.content-blog__item-title
-								|Самый необходимый набор Gulp плагинов
-							.content-blog__item-date
-								|22 ноября 2016
-							.content-blog__item-text
-								|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
-								|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
-								|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+							.content-blog__item-main
+								.content-blog__item-title
+									|Самый необходимый набор Gulp плагинов
+								.content-blog__item-date
+									|22 ноября 2016
+								.content-blog__item-text
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
 	footer.footer__pages
 		.footer-up
 			.footer-up__left
@@ -98,16 +121,17 @@ block content
 						a.footer-up__link(href="#")
 							|Авторизация
 			.footer-up__right
-				ul.socials__list.socials__list_border_circle
-					li.socials__item
-						a.socials__link(href='https://vk.com', target='_blank')
-							i.fa.fa-vk(aria-hidden='true')
-					li.socials__item
-						a.socials__link(href='https://github.com', target='_blank')
-							i.fa.fa-github-alt(aria-hidden='true')
-					li.socials__item
-						a.socials__link(href='https://linkedin.com', target='_blank')
-							i.fa.fa-linkedin(aria-hidden='true')
+				.socials.socials_place_footer
+					ul.socials__list.socials__list_border_circle
+						li.socials__item
+							a.socials__link(href='https://vk.com', target='_blank')
+								i.fa.fa-vk(aria-hidden='true')
+						li.socials__item
+							a.socials__link(href='https://github.com', target='_blank')
+								i.fa.fa-github-alt(aria-hidden='true')
+						li.socials__item
+							a.socials__link(href='https://linkedin.com', target='_blank')
+								i.fa.fa-linkedin(aria-hidden='true')
 		.footer-down
 			.footer-down__left
 				.footer__description
