--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -6,31 +6,35 @@ block variables
 block content
 	.wrapper.wrapper_background
 		.content
-			.user__author
-				.user__photo
-					img.user__pic(src='assets/img/ava.jpg', alt='Ava')
-				.user__name Владимир Астахов
-				.user__description Личный сайт веб разработчика
-			ul.socials__list
-				li.socials__item
-					a.socials__link(href='https://vk.com', target='_blank')
-						i.fa.fa-vk(aria-hidden='true')
-				li.socials__item
-					a.socials__link(href='https://github.com', target='_blank')
-						i.fa.fa-github-alt(aria-hidden='true')
-				li.socials__item
-					a.socials__link(href='https://linkedin.com', target='_blank')
-						i.fa.fa-linkedin(aria-hidden='true')
-			ul.nav__list
-				li.nav__item.nav__item-big
-					a.nav__link(href='works.html')
-						| Мои работы
-				li.nav__item
-					a.nav__link(href='about.html')
-						| Обо мне
-				li.nav__item
-					a.nav__link(href='blog.html')
-						| Блог
+			.content__index
+				.user
+					.user__author
+						.user__photo
+							img.user__pic(src='assets/img/ava.jpg', alt='Ava')
+						.user__name Владимир Астахов
+						.user__description Личный сайт веб разработчика
+				.socials.socials_place_main
+					ul.socials__list.socials__list_color_green
+						li.socials__item
+							a.socials__link(href='https://vk.com', target='_blank')
+								i.fa.fa-vk(aria-hidden='true')
+						li.socials__item
+							a.socials__link(href='https://github.com', target='_blank')
+								i.fa.fa-github-alt(aria-hidden='true')
+						li.socials__item
+							a.socials__link(href='https://linkedin.com', target='_blank')
+								i.fa.fa-linkedin(aria-hidden='true')
+			.nav
+				ul.nav__list
+					li.nav__item.nav__item-big
+						a.nav__link(href='works.html')
+							| Мои работы
+					li.nav__item
+						a.nav__link(href='about.html')
+							| Обо мне
+					li.nav__item
+						a.nav__link(href='blog.html')
+							| Блог
 	.authorization
 		.authorization__button
 			a.authorization__link(href='#') Авторизоваться
