--- a/source/style/common/header.scss
+++ b/source/style/common/header.scss
@@ -1,7 +1,7 @@
 .header{
 	background: $background;
 	background-size: cover;
-	background-position: 0 -55px;
+	background-position: center top;
 	height: 600px;
   	overflow: hidden;
   	position: relative;
@@ -13,15 +13,14 @@
 	}
 
 	&__blog{
-		background-position: 0 -155px;
 		height: 400px;
 	}
 }
 
 .blog__container{
-	width: 1150px;
+	max-width: 1150px;
 	margin: 0 auto;
-	padding-left: 10px;
+	padding: 0 10px;
 }
 
 .pages__container{
@@ -93,6 +92,10 @@
 
   	@include laptop{
   		width: 95%;
+  	}
+
+  	@include tablets{
+  		display: none;
   	}
 }
 
