--- a/source/style/common/index.scss
+++ b/source/style/common/index.scss
@@ -6,7 +6,7 @@
 }
 
 .content__index{
-	background-color: rgba(252,252,252,0.65);
+	background-color: rgba(252,252,252,0.85);
 	padding-bottom: 35px;
 }
 
@@ -76,7 +76,7 @@
 .nav__item{
 	float: left;
 	width: 30%;
-	border-left: 1px solid rgba(252,252,252,.65);
+	border-left: 1px solid rgba(252,252,252,.85);
 }
 
 .nav__item:first-child{
@@ -90,7 +90,7 @@
 .nav__link{
 	display: block;
 	padding: 11px 10px;
-	background-color: rgba(#00bfa5, .65);
+	background-color: rgba(#00bfa5, .85);
 	color: #fff;
 	font-size: 16px;
 	transition: $transition;
@@ -104,6 +104,15 @@
 	position: absolute;
 	right: 100px;
 	top: 25px;
+
+	@include laptop{
+    	right: 25px;
+  	}
+
+  	@include phones{
+    	right: 50%;
+    	transform: translateX(50%);
+  	}
 }
 
 .authorization__link{
