--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -4,6 +4,17 @@ block variables
 	- var title = 'Main page'
 
 block content
+	.parallax
+		.parallax__layer(style='background-image: url("assets/img/Layer-9.png")')
+		.parallax__layer(style="background-image: url('assets/img/Layer-8.png');")
+		.parallax__layer(style="background-image: url('assets/img/Layer-7.png');")
+		.parallax__layer(style="background-image: url('assets/img/Layer-6a.png');")
+		.parallax__layer(style="background-image: url('assets/img/Layer-6.png');")
+		.parallax__layer(style="background-image: url('assets/img/Layer-4.png');")
+		.parallax__layer(style="background-image: url('assets/img/Layer-3.png');")
+		.parallax__layer(style="background-image: url('assets/img/Layer-2.png');")
+		.parallax__layer(style="background-image: url('assets/img/Layer-1.png');")
+		.parallax__layer(style="background-image: url('assets/img/Layer-0.png');")
 	.wrapper.wrapper_background
 		.content
 			.content__index
