--- a/source/style/common/style.scss
+++ b/source/style/common/style.scss
@@ -16,10 +16,10 @@ html{
 
 html, body{
 	width: 100%;
-	min-height: 100%;
+	min-height: 100%; 
 	margin: 0;
 	padding:0;
-	min-height: 400px;
+	background: $bg;
 }
 
 body{
