--- a/source/style/common/works.scss
+++ b/source/style/common/works.scss
@@ -2,7 +2,7 @@
   @extend %clearfix;
   color: $main-font-color;
   position: relative;
-  background: $bg;
+
 }
 
 .works__triangles {
@@ -16,13 +16,10 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  min-height: 525px;
   flex-wrap: wrap;
   overflow: hidden;
   @extend %clearfix;
-
-  @include laptop{
-    height: 80vh;
-  }
 
   @include tablets{
     flex-wrap: nowrap;
@@ -75,11 +72,12 @@
 }
 
 .slider__active-pic{
+  max-height: 95%;
   width: 95%;
   max-width: 725px;
 
   @include tablets{
-    max-height: 95%;
+    max-height: 90%;
     width: auto;
     max-width: 95%;
   }
