--- a/source/style/common/header.scss
+++ b/source/style/common/header.scss
@@ -8,6 +8,13 @@
     display: none;
 }
 
+.fullscreen-menu__list{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
 .fullscreen-menu__link{
 	display: block;
 
