--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -39,7 +39,7 @@ block content
 							.burger-menu
 								a.burger-menu__link(href='#')
 									span.burger-menu__link-center
-					.header__user
+					.user.user_position_header
 						.user__photo.user__photo_small
 							img.user__pic(src='assets/img/ava.jpg', alt='Ava')
 						.header__name
