--- a/source/style/common/blog.scss
+++ b/source/style/common/blog.scss
@@ -61,8 +61,9 @@
 
 	@include tablets{
     	float: none;
-    	width: 100%;
+    	width: 95%;
     	margin-left: 0;
+    	margin: 0 auto;
   	}
 }
 
