--- a/source/style/common/works.scss
+++ b/source/style/common/works.scss
@@ -110,7 +110,6 @@
 }
 
 .slider__list{
-  flex: 1;
   display: flex;
   width: 50%;
   height: 30%;
@@ -188,23 +187,23 @@
 }
 
 .reviews{
-  background: url('../img/reviews.jpg');
-  background-size: cover;
-  background-position: center center;
-
+  position: relative;
   @include tablets{
     height: auto;
     padding-bottom: 320px;
   }
 }
 
-.reviews_colourful{
+.reviews__background{
+  position: absolute;
   width: 100%;
-  height: 100%; 
-  background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 32%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 32%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 32%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+  height: 100%;
+  min-width: 1600px;
+}
+
+.reviews__background-pic{
+  display: block;
+  width: 100%;
 }
 
 .reviews__block{
@@ -212,6 +211,10 @@
   font-family: 'robotoregular', Arial, sans-serif;
   padding-top: 55px;
   margin-bottom: 10px;
+  background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 82%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 82%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 82%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
 }
 
 .reviews__list{
@@ -285,18 +288,34 @@
 }
 
 .write-me{
-  background: url('../img/write_me.jpg');
-  background-size: inherit;
-  background-position: center center;
-  border-radius: 0.5rem;
   color: #373e42;
   width: 26rem;
   margin: 0 auto;
-  overflow: hidden;
 }
 
-.write-me_colourful{
-  background: rgba(#fcfcfc, .15);
+.write-me__blur-wrapper{
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  position: relative;
+}
+
+.write-me__blur{
+  background: url('../img/reviews.jpg') center no-repeat;
+  filter: blur(20px);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.write-me__form-wrapper{
+  position: absolute;
+
+  &_none{
+    position: static;
+    opacity:0;
+  }
 }
 
 .reviews__form-inputs{
