--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -44,7 +44,7 @@ block content
 				.header-without-triangles
 					.header__title
 						img(src="assets/img/portfolio-header.png", alt="").header__title-img
-						.header__user
+						.user.user_position_header
 							.user__photo.user__photo_small
 								img.user__pic(src='assets/img/ava.jpg', alt='Ava')
 							.user__name.user__name_color_white Владимир Астахов
@@ -86,39 +86,53 @@ block content
 		section.section.last.reviews
 			a(href="#document").up-arrow
 					i.fa.fa-chevron-up(aria-hidden='true')
-			.reviews_colourful
-				.reviews__block
-					ul.reviews__list
-						li.reviews__item
-							i.fa.fa-quote-left(aria-hidden='true').reviews__item-quote
-							.reviews__item-text 
-								|Этот парень проходил обучение веб-разработке не где-то, а в Loftschool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
-							.reviews__item-person
-								.reviews-person__photo
-									img.reviews-person__photo-pic(src='assets/img/teacher.jpg')
-								.reviews__item-person-block
-									.reviews__item-person-title Ковальчук Дмитрий
-									.reviews__item-person-role Основатель Loftchool
-						li.reviews__item
-							i.fa.fa-quote-left(aria-hidden='true').reviews__item-quote
-							.reviews__item-text 
-								|Этот код выдержит любые испытания. Только пожалуйста, не загружается сайт на слишком старых браузерах!
-							.reviews__item-person
-								.reviews-person__photo
-									img.reviews-person__photo-pic(src='assets/img/teacher2.jpg')
-								.reviews__item-person-block
-									.reviews__item-person-title Сабанцев Владимир
-									.reviews__item-person-role Преподаватель
-				.contacts.write-me
-					.write-me_colourful
+			.reviews__background
+				img.reviews__background-pic(src='assets/img/reviews.jpg')
+			.reviews__block
+				ul.reviews__list
+					li.reviews__item
+						i.fa.fa-quote-left(aria-hidden='true').reviews__item-quote
+						.reviews__item-text 
+							|Этот парень проходил обучение веб-разработке не где-то, а в Loftschool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
+						.reviews__item-person
+							.reviews-person__photo
+								img.reviews-person__photo-pic(src='assets/img/teacher.jpg')
+							.reviews__item-person-block
+								.reviews__item-person-title Ковальчук Дмитрий
+								.reviews__item-person-role Основатель Loftchool
+					li.reviews__item
+						i.fa.fa-quote-left(aria-hidden='true').reviews__item-quote
+						.reviews__item-text 
+							|Этот код выдержит любые испытания. Только пожалуйста, не загружается сайт на слишком старых браузерах!
+						.reviews__item-person
+							.reviews-person__photo
+								img.reviews-person__photo-pic(src='assets/img/teacher2.jpg')
+							.reviews__item-person-block
+								.reviews__item-person-title Сабанцев Владимир
+								.reviews__item-person-role Преподаватель
+			.write-me
+				.write-me__blur-wrapper
+					.write-me__blur
+					.write-me__form-wrapper
 						+title__small('Связаться со мной', 'about__section-title_small')
 						form.reviews__form(method="POST")
 							.reviews__form-inputs
 								input.reviews__form-input.reviews__form-element(name="name", type="text", placeholder='Имя')
 								input.reviews__form-input.reviews__form-element(name="email", type="email", placeholder='Email')
 								textarea.reviews__form-textarea.reviews__form-element(name="textarea", placeholder='Ваше сообщение')
-							input.reviews__form-button(name="", type="submit", value="Отправить")
-							input.reviews__form-button.reviews__form-button-reset(name="", type="reset" value="Очистить")
+							.reviews__form-buttons
+								input.reviews__form-button(name="", type="submit", value="Отправить")
+								input.reviews__form-button.reviews__form-button-reset(name="", type="reset" value="Очистить")
+					.write-me__form-wrapper.write-me__form-wrapper_none
+						+title__small('Связаться со мной', 'about__section-title_small')
+						form.reviews__form(method="POST")
+							.reviews__form-inputs
+								input.reviews__form-input.reviews__form-element(name="name", type="text", placeholder='Имя')
+								input.reviews__form-input.reviews__form-element(name="email", type="email", placeholder='Email')
+								textarea.reviews__form-textarea.reviews__form-element(name="textarea", placeholder='Ваше сообщение')
+							.reviews__form-buttons
+								input.reviews__form-button(name="", type="submit", value="Отправить")
+								input.reviews__form-button.reviews__form-button-reset(name="", type="reset" value="Очистить")
 			footer.footer_margin_top
 				.footer-up
 					.footer-up__left
